Issue #3065169 by agami4: Remove z-index from main revert changes photoswipe.js

--- a/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
+++ b/themes/socialbase/components/03-molecules/navigation/navbar/navbar.scss
@@ -222,10 +222,6 @@
 
   }
 
-  body.is-pswp--open & {
-    position: relative;
-  }
-
 }
 
 // Brand/project name
